# vpnbot-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
app/: main.py
app/core/lifespan/: __init__.py  admin.py  base.py  clients.py
app/core/middlewares/: activity.py  docs_auth.py  logging.py
app/routers/: base.py  main.py
app/routers/v1/: __init__.py  bot.py
shared/core/connections/: base.py  cache.py  database.py  http.py  messaging.py  storage.py
shared/core/dependencies/: container.py
shared/core/dependencies/providers/: users.py
shared/core/exceptions/: base.py
shared/core/integrations/cache/: base.py
shared/core/integrations/http/: base.py
shared/core/integrations/mail/: base.py
shared/core/integrations/storage/: base.py
shared/core/logging/: formater.py  setup.py
shared/core/migrations/: env.py
shared/core/security/: auth.py  password.py  token.py
shared/core/settings/: __init__.py  logging.py  paths.py  settings.py
shared/models/v1/: base.py
shared/schemas/v1/: base.py  paginations.py
shared/services/v1/: base.py
